"Added sign in first page if user is unauthenticated, error messages for incorrect credentials, and routing issues that had cropped up adding these new components."

--- a/infomapper-builder/src/styles.scss
+++ b/infomapper-builder/src/styles.scss
@@ -65,9 +65,14 @@ hand corner of the Dialog do not appear to the user. */
   transform: none !important;
 }
 
-/*  */
+/* Styles all error snack-bars displayed in the app. */
 .snackbar-error {
   color: #ff3636;
+}
+
+/* Styles all warning snack-bars displayed in the app. */
+.snackbar-warning {
+  color: #ffea00;
 }
 
 /* IDs */
